--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,16 +7,56 @@
     <title>{{site.title}}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="shortcut icon" href="{{site.icon}}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
   </head>
+  <base target="_blank">
   <body>
-    <div class="whitespace"></div>
+    <div>
+      <div class="wrapper">
+        <h1 style="color: {{site.syscolor}}; font-family: '{{site.sysfont}}', sans-serif;">
+          {{site.title}}
+        </h1>
+        <h4>
+          {{site.description}}
+        </h4>
+        <div class="authors-wrapper">
+        {% for author in site.data.authors %}
+          <div class="author-container">
+            <div class="author-image">
+              <img src="/assets/img/{{author.img}}"/>
+            </div>
+            <p>
+            {% if author.website %}
+              <a href="{{author.website}}">
+                {{author.name}}
+              </a>
+            {% else %}
+              {{author.name}}
+            {% endif %}
+            </p>
+            <p>
+              {{author.affiliation}}
+            </p>
+          </div>
+        {% endfor %}
+        </div>
+      </div>
+    </div>
     <div class="wrapper">
+      <hr/>
+      {% if site.video %}
+      <div class="video-wrapper">
+        <iframe src="{{site.video}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <hr/>
+      {% endif %}
       {{ content }}
     </div>
-    <div class="whitespace"></div>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
